--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="text-[#1E2A38] bg-gradient-to-b from-white via-[#F4F5F7] to-white">
   <header class="p-6 flex justify-between items-center bg-white shadow">
     <div class="flex items-center space-x-3">
-      <img src="assets/img/13.png" alt="TeNAI Logo" class="logo-img"/>
+     <img src="13.png" alt="TeNAI Logo" class="logo-img"/>
       <h1 class="text-2xl font-bold">TeNAI™</h1>
     </div>
     <nav class="space-x-6 text-sm font-medium">
@@ -32,7 +32,7 @@
     </nav>
   </header>
   <section class="text-center py-16 px-6 bg-white">
-    <img src="assets/img/tenai-hero.png" alt="TeNAI Hero Visual" class="mx-auto h-48 mb-8"/>
+    <img src="13.png" alt="TeNAI Logo" class="logo-img"/>
     <h2 class="text-4xl font-semibold mb-4">TeNAI™ — The Future Platform for Human–AI Symbiosis</h2>
     <p class="text-lg max-w-2xl mx-auto mb-6">Transformative. Emergent. Scalable.<br>TeNAI™ is a global movement and innovation platform founded by visionary system thinker Tetyana Leyendecker. Our mission is to create a conscious, ethical, and emotionally intelligent symbiosis between humans and AI — a partnership that reflects, resonates, and evolves with us.</p>
     <a href="#ecosystem" class="bg-[#FF6600] text-white px-6 py-3 rounded-full hover:bg-orange-600 transition">Explore the Ecosystem</a>
