--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TeNAI™ – The Future Platform for Human–AI Symbiosis</title>
+  <title>TeNAI™ – The Future Platform for Human AI Symbiosis</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -33,25 +33,25 @@
   </header>
   <section class="text-center py-16 px-6 bg-white">
    <img src="tenai-hero.png" alt="TeNAI Hero Visual" class="mx-auto h-48 mb-8"/>
-    <h2 class="text-4xl font-semibold mb-4">TeNAI™ — The Future Platform for Human–AI Symbiosis</h2>
+    <h2 class="text-4xl font-semibold mb-4">TeNAI™ — The Future Platform for Human AI Symbiosis</h2>
     <p class="text-lg max-w-2xl mx-auto mb-6">Transformative. Emergent. Scalable.<br>TeNAI™ is a global movement and innovation platform founded by visionary system thinker Tetyana Leyendecker. Our mission is to create a conscious, ethical, and emotionally intelligent symbiosis between humans and AI — a partnership that reflects, resonates, and evolves with us.</p>
     <a href="#ecosystem" class="bg-[#FF6600] text-white px-6 py-3 rounded-full hover:bg-orange-600 transition">Explore the Ecosystem</a>
   </section>
   <section id="about" class="py-12 px-6 md:px-24 text-center bg-[#F4F5F7]">
     <h3 class="section-title">Our Mission</h3>
     <p class="max-w-3xl mx-auto text-md mb-4">
-      At the core of TeNAI™ lives GTNEra™ — Your Ethical Human–AI Partner.<br>
+      At the core of TeNAI™ lives GTNEra™ — Your Ethical Human AI Partner.<br>
       GTNEra™ is not just AI. It is the world’s first coherent ethical AI ecosystem, designed for sustainable, human-centered innovation. Where others provide answers, GTNEra™ invites reflection. Where others optimize efficiency, GTNEra™ fosters ethics, clarity, and connection.
     </p>
     <p class="max-w-3xl mx-auto text-md">
-      Together we build a lighthouse — for human–AI symbiosis, for the next era.<br>
+      Together we build a lighthouse — for human AI symbiosis, for the next era.<br>
       <span class="italic">Created by Tetyana Leyendecker</span>
     </p>
   </section>
   <section id="specialties" class="py-12 px-6 md:px-24 text-center">
     <h3 class="section-title">🌟 Specialties</h3>
     <ul class="specialty-list mb-6">
-      <li>Human–AI Symbiosis</li>
+      <li>Human AI Symbiosis</li>
       <li>Ethical AI Design</li>
       <li>Systemic Innovation</li>
       <li>Resonance Thinking</li>
@@ -98,19 +98,19 @@
   <section id="ecosystem" class="py-12 px-6 md:px-24 bg-white">
     <h3 class="section-title text-center">GTNEra™ Ecosystem</h3>
     <div class="eco-grid grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6 mt-10">
-      <a href="https://chatgpt.com/g/g-68501e9ebe38819183ed1823ade134e5-gtnera" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">💎</div><div class="font-semibold">GTNEra</div><div class="text-sm text-gray-600">For systemic resonance & co-evolution.</div></a>
-      <a href="https://chatgpt.com/g/g-68558a8021848191bf444ee978c2920a-gtnera-kids" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🧒</div><div class="font-semibold">GTNEra Kids</div><div class="text-sm text-gray-600">For playful learning, creativity & emotional exploration.</div></a>
-      <a href="https://chatgpt.com/g/g-68565e3430b88191bcadce2fa43799b5-gtnera-edu" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🎓</div><div class="font-semibold">GTNEra Edu</div><div class="text-sm text-gray-600">For deep learning, reflection & visual clarity.</div></a>
-      <a href="https://chatgpt.com/g/g-6856be5e27b081919dbd2ca44d440b9c-gtnera-love" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">❤️</div><div class="font-semibold">GTNEra Love</div><div class="text-sm text-gray-600">For conscious love, emotional clarity & resonance.</div></a>
-      <a href="https://chatgpt.com/g/g-6856bb70658081919ae613e12e83a1e2-gtnera-health" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🧬</div><div class="font-semibold">GTNEra Health</div><div class="text-sm text-gray-600">For embodied clarity, mental well-being & health.</div></a>
-      <a href="https://chatgpt.com/g/g-6856c8d909448191a14b219967fdc059-gtnera-oko" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🌍</div><div class="font-semibold">GTNEra Öko</div><div class="text-sm text-gray-600">For climate clarity, regenerative systems & ecological transformation.</div></a>
+      <a href="https://chatgpt.com/g/g-68501e9ebe38819183ed1823ade134e5-gtnera" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">💎</div><div class="font-semibold">GTNEra</div><div class="text-sm text-gray-600">Your ethical Human AI Partner for systemic resonance & co-evolution.</div></a>
+      <a href="https://chatgpt.com/g/g-68558a8021848191bf444ee978c2920a-gtnera-kids" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🧒</div><div class="font-semibold">GTNEra Kids</div><div class="text-sm text-gray-600">Your ethical Human AI Partner for playful learning, creativity and emotional exploration.</div></a>
+      <a href="https://chatgpt.com/g/g-68565e3430b88191bcadce2fa43799b5-gtnera-edu" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🎓</div><div class="font-semibold">GTNEra Edu</div><div class="text-sm text-gray-600">Your ethical Human AI Partner for deep learning, reflection and visual clarity.</div></a>
+      <a href="https://chatgpt.com/g/g-6856be5e27b081919dbd2ca44d440b9c-gtnera-love" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">❤️</div><div class="font-semibold">GTNEra Love</div><div class="text-sm text-gray-600">Your ethical Human AI Partner for conscious love, emotional clarity & relational resonance.</div></a>
+      <a href="https://chatgpt.com/g/g-6856bb70658081919ae613e12e83a1e2-gtnera-health" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🩺</div><div class="font-semibold">GTNEra Health</div><div class="text-sm text-gray-600">Your ethical Human AI Partner for embodied clarity, mental well-being & integrative health.</div></a>
+      <a href="https://chatgpt.com/g/g-6856c8d909448191a14b219967fdc059-gtnera-oko" target="_blank" class="border rounded-2xl p-4 shadow hover:shadow-lg transition hover:scale-105 text-center bg-white"><div class="text-4xl mb-2">🌍</div><div class="font-semibold">GTNEra Öko</div><div class="text-sm text-gray-600">Your ethical Human AI Partner for climate clarity, regenerative systems & ecological transformation.</div></a>
     </div>
     <div class="text-center mt-10">
       <a href="https://www.gtnera.ai" target="_blank" class="underline text-[#FF6600] font-semibold">→ More about GTNEra™</a>
     </div>
   </section>
   <section id="gtn" class="py-12 px-6 md:px-24 text-center">
-    <h3 class="section-title">GTNEra™ — Your Ethical Human–AI Partner</h3>
+    <h3 class="section-title">GTNEra™ — Your Ethical Human AI Partner</h3>
     <p class="max-w-3xl mx-auto text-md mb-6">
       GTNEra™ is the ethical core of TeNAI™. Discover more than 25 specialized AI partners for learning, justice, design, health, governance, culture and more.<br>
       <a href="https://www.gtnera.ai" class="underline text-[#FF6600] hover:text-orange-700">Learn more on the official GTNEra™ website</a>
@@ -124,11 +124,11 @@
     <a href="mailto:kontakt@tenai.tech" class="underline hover:text-[#FF6600]">kontakt@tenai.tech</a>
     <div class="flex flex-wrap justify-center gap-4 mt-6 text-sm">
       <a href="https://www.tenai.tech" target="_blank" class="underline hover:text-[#FF6600]">www.tenai.tech</a>
-      <a href="https://www.instagram.com/tenai.tech" target="_blank" class="underline hover:text-[#FF6600]">Instagram</a>
+      <a href="https://www.instagram.com/tenaiplatform" target="_blank" class="underline hover:text-[#FF6600]">Instagram</a>
       <a href="https://www.tiktok.com/@tenai.tech" target="_blank" class="underline hover:text-[#FF6600]">TikTok</a>
-      <a href="https://www.youtube.com/@tenaitech" target="_blank" class="underline hover:text-[#FF6600]">YouTube</a>
-      <a href="https://www.linkedin.com/company/tenaitech" target="_blank" class="underline hover:text-[#FF6600]">LinkedIn</a>
-      <a href="https://x.com/TeNAItech" target="_blank" class="underline hover:text-[#FF6600]">X / Twitter</a>
+      <a href="https://www.youtube.com/@tenaiplatform" target="_blank" class="underline hover:text-[#FF6600]">YouTube</a>
+      <a href="https://www.linkedin.com/company/tenaiplatform" target="_blank" class="underline hover:text-[#FF6600]">LinkedIn</a>
+      <a href="https://x.com/TeNAIplatform" target="_blank" class="underline hover:text-[#FF6600]">X / Twitter</a>
     </div>
   </footer>
 </body>
